remove npm install

--- a/devfile.yaml
+++ b/devfile.yaml
@@ -55,7 +55,7 @@ commands:
 events:
   postStart:
     - clone-frontend
-    - backend-mvn-clean-install
+    # - backend-mvn-clean-install
     # - frontend-npm-install
 components:
   - name: tools
