[Gepardec/mega#735] Fix log level config

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -18,9 +18,7 @@ quarkus:
       proactive: false
 
   log:
-    console:
-      enable: true
-      level: "ALL"
+    level: INFO
   smallrye-metrics:
     jaxrs:
       enabled: true
