[Gepardec/mega#763] Refactor date handling to use YearMonth consistently.
Replaced LocalDate with YearMonth across services, tests, and utility functions for improved clarity and accuracy when working with month-specific data. Adjusted method signatures and logic to align with the new type, simplifying handling of start and end dates within months.

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -46,7 +46,7 @@ jobs:
           image: mega-backend
           registry: ghcr.io
           dockerfile: Containerfile
-          buildArgs: COMMIT=${{ env.COMMIT}}, BRANCH=${{ env.BRANCH_NAME}}, VERSION=${{ env.COMMIT}}
+          buildArgs: COMMIT=${{ env.COMMIT}}, BRANCH=${{ env.BRANCH_NAME}}, VERSION=${{ env.VERSION}}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
           # if the branch is main, add the latest tag
