--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -14,7 +14,7 @@ on:
   workflow_dispatch:
     inputs:
       trigger_deploy:
-        description: 'Trigger deploy'
+        description: 'Release the container image'
         required: true
         default: false
         type: boolean
