--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -55,6 +55,7 @@ jobs:
   push:
     if: (github.event_name == 'push' || (github.event_name == 'workflow_dispatch' && github.event.inputs.trigger_deploy == 'true'))
     runs-on: ubuntu-latest
+    needs: build-test
     steps:
       # build the container image and release it as a package in this repository
       - uses: mr-smithers-excellent/docker-build-push@v6
