--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -20,7 +20,7 @@ on:
         type: boolean
 
 jobs:
-  build-test:
+  build-test-push:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -52,14 +52,9 @@ jobs:
           export CODACY_PROJECT_TOKEN=${{secrets.CODACY_PROJECT_TOKEN}}
           bash <(curl -Ls https://coverage.codacy.com/get.sh) report -r target/jacoco-report/jacoco.xml
 
-  push:
-    if: (github.event_name == 'push' || (github.event_name == 'workflow_dispatch' && github.event.inputs.trigger_deploy == 'true'))
-    runs-on: ubuntu-latest
-    needs: build-test
-    steps:
-      # build the container image and release it as a package in this repository
       - uses: mr-smithers-excellent/docker-build-push@v6
         name: push-container-image
+        if: (github.event_name == 'push' || (github.event_name == 'workflow_dispatch' && github.event.inputs.trigger_deploy == 'true'))
         with:
           image: mega-backend
           registry: ghcr.io
