--- a/.github/workflows/postUpdateTask.yaml
+++ b/.github/workflows/postUpdateTask.yaml
@@ -41,7 +41,7 @@ jobs:
       - uses: actions/checkout@v4
         name: checkout
         with:
-          ref: main
+          ref: feature/base-auto-update
 
       - uses: actions/setup-java@v4
         with:
