--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,10 @@
     <version>${revision}</version>
     <name>MEGA ZEP-Backend</name>
     <properties>
-        <maven-enforcer-plugin.version>3.0.0-M3</maven-enforcer-plugin.version>
+        <maven-enforcer-plugin.version>3.6.1</maven-enforcer-plugin.version>
         <maven-resource-plugin.version>3.1.0</maven-resource-plugin.version>
         <cxf-codegen-plugin.version>4.1.3</cxf-codegen-plugin.version>
+        <cxf-xjc-utils.version>4.0.0</cxf-xjc-utils.version>
         <surefire-plugin.version>3.5.3</surefire-plugin.version>
         <liquibase-maven-plugin.version>4.0.0</liquibase-maven-plugin.version>
         <native2ascii-maven-plugin.plugin.version>2.1.1</native2ascii-maven-plugin.plugin.version>
@@ -109,7 +110,7 @@
         <dependency>
             <groupId>com.google.apis</groupId>
             <artifactId>google-api-services-gmail</artifactId>
-            <version>v1-rev20231218-2.0.0</version>
+            <version>v1-rev20250630-2.0.0</version>
         </dependency>
         <dependency>
             <groupId>com.google.auth</groupId>
@@ -280,7 +281,7 @@
                     <dependency>
                         <groupId>org.apache.cxf.xjc-utils</groupId>
                         <artifactId>cxf-xjc-runtime</artifactId>
-                        <version>${cxf-codegen-plugin.version}</version>
+                        <version>${cxf-xjc-utils.version}</version>
                     </dependency>
                     <!--FIXME: Keep track of https://github.com/highsource/jaxb2-basics/issues/162, since it is the original package-->
                     <dependency>
