--- a/pom.xml
+++ b/pom.xml
@@ -7,31 +7,22 @@
     <artifactId>mega-backend</artifactId>
     <version>${revision}</version>
     <name>MEGA ZEP-Backend</name>
-    <properties>
-        <maven-enforcer-plugin.version>3.6.1</maven-enforcer-plugin.version>
-        <maven-resource-plugin.version>3.1.0</maven-resource-plugin.version>
-        <cxf-codegen-plugin.version>4.1.3</cxf-codegen-plugin.version>
-        <cxf-xjc-utils.version>4.1.0</cxf-xjc-utils.version>
-        <surefire-plugin.version>3.5.3</surefire-plugin.version>
-        <liquibase-maven-plugin.version>4.0.0</liquibase-maven-plugin.version>
-        <native2ascii-maven-plugin.plugin.version>2.1.1</native2ascii-maven-plugin.plugin.version>
 
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+    <properties>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.version>3.8.1</maven.version>
-
-        <guava.version>33.2.1-jre</guava.version>
 
         <quarkus-plugin.version>3.26.3</quarkus-plugin.version>
         <quarkus.platform.version>3.26.3</quarkus.platform.version>
 
         <ws.rt.version>4.0.3</ws.rt.version>
-        <xml.resolver.version>20050927</xml.resolver.version>
         <focus-shift.version>1.5.7</focus-shift.version>
         <assertj.version>3.21.0</assertj.version>
         <basicjaxb-plugins.version>2.2.1</basicjaxb-plugins.version>
         <jakarta.mail-api.version>2.1.4</jakarta.mail-api.version>
+
         <!-- application info -->
         <!-- !!! IMPORTANT !!!! -->
         <!-- remove -SNAPSHOT in release-branch but keep it in develop branch -->
@@ -42,10 +33,34 @@
         <sonar.language>java</sonar.language>
         <sonar.moduleKey>${project.groupId}:${project.artifactId}</sonar.moduleKey>
         <sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
+
         <revision>4.8.0</revision>
         <timestamp>${maven.build.timestamp}</timestamp>
         <maven.build.timestamp.format>yyyy-MM-dd'T'HH:mm:ss</maven.build.timestamp.format>
+
+        <!-- 3rd-party version properties -->
+        <google-api-client-bom.version>2.8.1</google-api-client-bom.version>
+        <google-api-services-gmail.version>v1-rev20250630-2.0.0</google-api-services-gmail.version>
+        <google-auth-library-oauth2-http.version>1.39.0</google-auth-library-oauth2-http.version>
+        <postgresql.version>42.7.7</postgresql.version>
+        <assertj-core.version>3.27.4</assertj-core.version>
+        <liquibase-maven-plugina.version>4.33.0</liquibase-maven-plugina.version>
+        <jakarta.validation-api.version>3.1.1</jakarta.validation-api.version>
+        <liquibase-hibernate6.version>4.33.0</liquibase-hibernate6.version>
+        <spring-beans.version>6.2.11</spring-beans.version>
+        <spring-data-jpa.version>3.5.3</spring-data-jpa.version>
+        <snakeyaml.version>2.5</snakeyaml.version>
+
+        <!-- Plugins -->
+        <maven-enforcer-plugin.version>3.6.1</maven-enforcer-plugin.version>
+        <maven-resource-plugin.version>3.1.0</maven-resource-plugin.version>
+        <cxf-codegen-plugin.version>4.1.3</cxf-codegen-plugin.version>
+        <cxf-xjc-utils.version>4.1.0</cxf-xjc-utils.version>
+        <surefire-plugin.version>3.5.3</surefire-plugin.version>
+        <liquibase-maven-plugin.version>4.0.0</liquibase-maven-plugin.version>
+        <native2ascii-maven-plugin.plugin.version>2.1.1</native2ascii-maven-plugin.plugin.version>
     </properties>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -58,12 +73,13 @@
             <dependency>
                 <groupId>com.google.api-client</groupId>
                 <artifactId>google-api-client-bom</artifactId>
-                <version>2.8.1</version>
+                <version>${google-api-client-bom.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
+
     <dependencies>
         <!-- Quarkus REST-Extensions -->
         <dependency>
@@ -86,6 +102,7 @@
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-resteasy-client-jackson</artifactId>
         </dependency>
+
         <!-- Quarkus MicroProfile-Extensions -->
         <dependency>
             <groupId>io.quarkus</groupId>
@@ -104,46 +121,10 @@
             <artifactId>quarkus-smallrye-metrics</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.google.api-client</groupId>
-            <artifactId>google-api-client</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.google.apis</groupId>
-            <artifactId>google-api-services-gmail</artifactId>
-            <version>v1-rev20250630-2.0.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.google.auth</groupId>
-            <artifactId>google-auth-library-oauth2-http</artifactId>
-            <version>1.39.0</version>
-        </dependency>
-        <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-oidc</artifactId>
         </dependency>
-        <!-- Quarkus JPA-Extensions -->
-        <dependency>
-            <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-hibernate-orm</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-hibernate-orm-panache</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-jdbc-postgresql</artifactId>
-        </dependency>
-        <!-- Temporary override because of CVE-2024-1597 in quarkus-jdbc-postgresql-->
-        <dependency>
-            <groupId>org.postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-            <version>42.7.7</version>
-        </dependency>
-        <dependency>
-            <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-hibernate-validator</artifactId>
-        </dependency>
+
         <!-- Other Quarkus-Extensions -->
         <dependency>
             <groupId>io.quarkus</groupId>
@@ -169,6 +150,48 @@
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-cache</artifactId>
         </dependency>
+
+        <!-- Quarkus JPA-Extensions -->
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-hibernate-validator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-hibernate-orm</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-hibernate-orm-panache</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-jdbc-postgresql</artifactId>
+        </dependency>
+
+        <!-- Temporary override because of CVE-2024-1597 in quarkus-jdbc-postgresql-->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>${postgresql.version}</version>
+        </dependency>
+
+        <!-- Google APIs -->
+        <dependency>
+            <groupId>com.google.api-client</groupId>
+            <artifactId>google-api-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.google.apis</groupId>
+            <artifactId>google-api-services-gmail</artifactId>
+            <version>${google-api-services-gmail.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.auth</groupId>
+            <artifactId>google-auth-library-oauth2-http</artifactId>
+            <version>${google-auth-library-oauth2-http.version}</version>
+        </dependency>
+
         <!-- Additional Dependencies -->
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -188,15 +211,18 @@
             <version>${ws.rt.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.sun.org.apache.xml.internal</groupId>
-            <artifactId>resolver</artifactId>
-            <version>${xml.resolver.version}</version>
-        </dependency>
-        <dependency>
             <groupId>de.focus-shift</groupId>
             <artifactId>jollyday-jaxb</artifactId>
             <version>${focus-shift.version}</version>
         </dependency>
+
+        <!-- Mail -->
+        <dependency>
+            <groupId>jakarta.mail</groupId>
+            <artifactId>jakarta.mail-api</artifactId>
+            <version>${jakarta.mail-api.version}</version>
+        </dependency>
+
         <!-- Test Dependencies -->
         <dependency>
             <groupId>io.rest-assured</groupId>
@@ -216,7 +242,7 @@
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
-            <version>3.27.4</version>
+            <version>${assertj-core.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -234,12 +260,8 @@
             <artifactId>quarkus-jacoco</artifactId>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>jakarta.mail</groupId>
-            <artifactId>jakarta.mail-api</artifactId>
-            <version>${jakarta.mail-api.version}</version>
-        </dependency>
     </dependencies>
+
     <build>
         <resources>
             <resource>
@@ -247,6 +269,7 @@
                 <filtering>true</filtering>
             </resource>
         </resources>
+
         <plugins>
             <plugin>
                 <groupId>org.apache.cxf</groupId>
@@ -296,6 +319,7 @@
                     </dependency>
                 </dependencies>
             </plugin>
+
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
@@ -313,6 +337,7 @@
                     </execution>
                 </executions>
             </plugin>
+
             <plugin>
                 <groupId>io.quarkus</groupId>
                 <artifactId>quarkus-maven-plugin</artifactId>
@@ -325,6 +350,7 @@
                     </execution>
                 </executions>
             </plugin>
+
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${surefire-plugin.version}</version>
@@ -335,6 +361,7 @@
                     </systemPropertyVariables>
                 </configuration>
             </plugin>
+
             <plugin>
                 <artifactId>maven-enforcer-plugin</artifactId>
                 <version>${maven-enforcer-plugin.version}</version>
@@ -363,10 +390,11 @@
                     </execution>
                 </executions>
             </plugin>
+
             <plugin>
                 <groupId>org.liquibase</groupId>
                 <artifactId>liquibase-maven-plugin</artifactId>
-                <version>4.33.0</version>
+                <version>${liquibase-maven-plugina.version}</version>
                 <configuration>
                     <propertyFile>liquibase.properties</propertyFile>
                     <!--
@@ -382,31 +410,32 @@
                     <dependency>
                         <groupId>jakarta.validation</groupId>
                         <artifactId>jakarta.validation-api</artifactId>
-                        <version>3.1.1</version>
+                        <version>${jakarta.validation-api.version}</version>
                     </dependency>
                     <!--Make sure that liquibase version delivered with quarkus is the same as this dependency-->
                     <dependency>
                         <groupId>org.liquibase.ext</groupId>
                         <artifactId>liquibase-hibernate6</artifactId>
-                        <version>4.33.0</version>
+                        <version>${liquibase-hibernate6.version}</version>
                     </dependency>
                     <dependency>
                         <groupId>org.springframework</groupId>
                         <artifactId>spring-beans</artifactId>
-                        <version>6.2.11</version>
+                        <version>${spring-beans.version}</version>
                     </dependency>
                     <dependency>
                         <groupId>org.springframework.data</groupId>
                         <artifactId>spring-data-jpa</artifactId>
-                        <version>3.5.3</version>
+                        <version>${spring-data-jpa.version}</version>
                     </dependency>
                     <dependency>
                         <groupId>org.yaml</groupId>
                         <artifactId>snakeyaml</artifactId>
-                        <version>2.5</version>
+                        <version>${snakeyaml.version}</version>
                     </dependency>
                 </dependencies>
             </plugin>
+
             <!-- Now we can use UTF-8 in the properties files which get converted transparently -->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -428,6 +457,7 @@
                     </execution>
                 </executions>
             </plugin>
+
             <plugin>
                 <groupId>io.quarkus</groupId>
                 <artifactId>quarkus-smallrye-metrics</artifactId>
