--- a/.github/workflows/sbomToDependencyTrack.yaml
+++ b/.github/workflows/sbomToDependencyTrack.yaml
@@ -23,13 +23,6 @@ jobs:
       - name: Build (and test) project with Maven
         run: mvn -B package --file pom.xml
 
-      - name: Read Maven project.version
-        id: mvn_version
-        run: |
-          set -euo pipefail
-          VERSION="$(mvn -q -DforceStdout help:evaluate -Dexpression=project.version)"
-          echo "version=$VERSION" >> "$GITHUB_OUTPUT"
-
       - name: Generate CycloneDX SBOM
         run: mvn cyclonedx:makeAggregateBom
 
@@ -38,7 +31,6 @@ jobs:
           API_URL: ${{ secrets.DEPENDENCY_TRACK_API_URL }}
           API_KEY: ${{ secrets.DEPENDENCY_TRACK_API_KEY }}
           PROJECT_NAME: ${{ secrets.DEPENDENCY_TRACK_PROJECT_NAME }}
-          PROJECT_VERSION: ${{ steps.mvn_version.outputs.version }}
         run: |
           set -euo pipefail
           
@@ -48,7 +40,7 @@ jobs:
           base64 < "$BOM_FILE" | tr -d '\r\n' | \
           jq -Rs \
           --arg projectName "${PROJECT_NAME}" \
-          --arg projectVersion "${PROJECT_VERSION}" \
+          --arg projectVersion "Auto-Update" \
           '{
             projectName: $projectName,
             projectVersion: $projectVersion,
