--- a/.github/workflows/postUpdateTask.yaml
+++ b/.github/workflows/postUpdateTask.yaml
@@ -8,6 +8,22 @@ on:
       - 'feature/base-auto-update'
 
 jobs:
+  verifyupdate:
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkoutauto
+        uses: actions/checkout@v5
+
+      - name: Set up JDK 21
+        uses: actions/setup-java@v5
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+          cache: maven
+
+      - name: Build (and test) project with Maven
+        run: mvn -B package --file pom.xml
+
   postupgradetask:
     if: ${{ startsWith(github.head_ref, 'renovate/quarkus') }}
     runs-on: ubuntu-latest
