#159 change pull_request_target to pull_request

--- a/.github/workflows/postUpdateTask.yaml
+++ b/.github/workflows/postUpdateTask.yaml
@@ -2,7 +2,7 @@ name: PostUpdateTask
 
 on:
   workflow_dispatch:
-  pull_request_target:
+  pull_request:
     types: [ opened, reopened ]
     branches:
       - 'feature/base-auto-update'
